logs/mrsd_ros_tutorials/build.make.194.log.stderr
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp: In function ‘int main(int, char**)’:
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp:111:47: error: no matching function for call to ‘fromROSMsg(sensor_msgs::PointCloud2&, pcl::PointCloud<pcl::PointXYZRGB>::Ptr&)’
         pcl::fromROSMsg(ros_msg_pc, xyz_pc_ptr)
                                               ^
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp:111:47: note: candidate is:
In file included from /home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp:13:0:
/opt/ros/indigo/include/pcl_conversions/pcl_conversions.h:547:8: note: template<class T> void pcl::fromROSMsg(const PointCloud2&, pcl::PointCloud<PointT>&)
   void fromROSMsg(const sensor_msgs::PointCloud2 &cloud, pcl::PointCloud<T> &pcl_cloud)
        ^
/opt/ros/indigo/include/pcl_conversions/pcl_conversions.h:547:8: note:   template argument deduction/substitution failed:
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp:111:47: note:   ‘pcl::PointCloud<pcl::PointXYZRGB>::Ptr {aka boost::shared_ptr<pcl::PointCloud<pcl::PointXYZRGB> >}’ is not derived from ‘pcl::PointCloud<PointT>’
         pcl::fromROSMsg(ros_msg_pc, xyz_pc_ptr)
                                               ^
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp:125:9: error: expected ‘;’ before ‘std’
         std::cout << "finish segment"<< std::endl;
         ^
make[2]: *** [CMakeFiles/perception_data.dir/src/perception_data.cpp.o] Error 1
make[1]: *** [CMakeFiles/perception_data.dir/all] Error 2
make: *** [all] Error 2
